Fix char `·` invisible issue for inline footnotes

--- a/src/less/chrome/han.less
+++ b/src/less/chrome/han.less
@@ -198,7 +198,7 @@ h-char.bd-consecutive[unicode="ff1a"] + h-char.bd-jiya.bd-open:before {
 // Fix the font and width of `·`
 h-char[unicode="b7"] {
 	position      : relative;
-	z-index       : -@zIndex-1;
+	// z-index       : -@zIndex-1;
 	display       : inline-block;
 	width         : 0.5em;
 	text-align    : center;
